manifests/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: todo-app
spec:
  selector:
    app: todo-app
  ports:
  - port: 4000
    targetPort: 4000
  type: ClusterIP
