manifests/mongo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: todo-app
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
